# speculative-agent

./: .bbid.json  .gitignore  CONSTELLATION.md  ENTERPRISE.md  MANIFEST.json  README.md  SDK.md  agent.py  architecture.md  architecture_explained.md  architecture_explained_v2.md  architecture_final.md  audit.py  bbid.py  benchmark.py  compliance.py  compliance_server.py  config.py  deploy.sh  eval_compliance.py  eval_suite.py  executor.py  index.html  lattice.html  preflight.py  providers.py  pyproject.toml  requirements.txt  run.sh  screen_agent.py  supervisor.py
.github/workflows/: deploy-paper.yml  pages.yml
compliance_sdk/: __init__.py
eval/: index.html
paper/: Makefile  header.html  main.html  main.tex  refs.bib  style.css
regulations/: anthropic_terms.md  ccpa.md  fcra.md  gdpr.md  glba.md  google_terms.md  hipaa.md  index.md  lgpd.md  metro2.md  openai_terms.md  openrouter_terms.md  pipeda.md  pipl.md  soc2.md
